[package]
name = "plutus-ledger-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = "1.3.1"
lbr-prelude = { git = "https://github.com/mlabs-haskell/lambda-buffers.git", rev = "1b07117d2d4428f9cf5bd88d0887435272afc8d4", optional = true }
serde_json = { version = "1.0.107", features = [
  "arbitrary_precision",
], optional = true }
num-bigint = "0.4.4"
serde = { version = "1.0.189", features = ["derive"], optional = true }
true = { version = "0.1.0", optional = true }
data-encoding = { version = "2.4.0", optional = true }
thiserror = "1.0.50"

[features]
serde = ["dep:serde", "num-bigint/serde"]
lbf = ["dep:lbr-prelude", "dep:data-encoding", "dep:serde_json"]
default = []
