[package]
name = "plutus-ledger-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Plutus Ledger types and utilities implemented in Rust"
repository = "https://github.com/mlabs-haskell/plutus-ledger-api-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = "1.3.1"
lbr-prelude = { git = "https://github.com/mlabs-haskell/lambda-buffers.git", rev = "7adcef1ea98dbfe9b3c4c527db3c499e078cb4d6", optional = true }
serde_json = { version = "1.0.107", features = [
  "arbitrary_precision",
], optional = true }
num-bigint = "0.4.4"
serde = { version = "1.0.189", features = ["derive"], optional = true }
true = { version = "0.1.0", optional = true }
data-encoding = { version = "2.4.0", optional = true }
thiserror = "1.0.50"
linked-hash-map = "0.5.6"

[features]
serde = ["dep:serde", "num-bigint/serde"]
lbf = ["dep:lbr-prelude", "dep:data-encoding", "dep:serde_json"]
default = []
