[package]
name = "is-plutus-data-derive"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Derive macro for IsPlutusData"
repository = "https://github.com/mlabs-haskell/plutus-ledger-api-rust"

[dependencies]
proc-macro2 = "^1.0.66"
quote = "1.0.37"
syn = { version = "2.0.79", features = ["full", "extra-traits"] }
thiserror = "1.0.64"

[lib]
proc-macro = true
