[package]
name = "plutus-data"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0.189", features = ["derive"], optional = true }
serde_json = { version = "1.0.128", optional = true }
num-bigint = "~0.4"
is-plutus-data-derive = { path = ".extras/is-plutus-data-derive-0", optional = true }
lbr-prelude = { version = "0.1.1", optional = true }
data-encoding = { version = "2.6.0", optional = true }
thiserror = "1.0.64"

[features]
default = []
serde = ["dep:serde", "num-bigint/serde", "dep:serde_json"]
lbf = ["dep:lbr-prelude", "dep:serde_json", "dep:data-encoding"]
derive = ["dep:is-plutus-data-derive"]
