[package]
name = "plutus-ledger-api"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Plutus Ledger types and utilities implemented in Rust"
repository = "https://github.com/mlabs-haskell/plutus-ledger-api-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = "^1.3.1"
lbr-prelude = { path = ".extras/lbr-prelude-0.1.0", version = "0.1.0", optional = true }
serde_json = { version = "^1.0.107", features = [
  "arbitrary_precision",
], optional = true }
num-bigint = "~0.4"
serde = { version = "^1.0.189", features = ["derive"], optional = true }
true = { version = "~0.1.0", optional = true }
data-encoding = "^2.4.0"
thiserror = "^1.0.50"
linked-hash-map = "~0.5.6"
num-traits = "~0.2.17"
impl_ops = "0.1.1"
chrono = { version = "0.4.34", optional = true }

[features]
default = []
serde = ["dep:serde", "num-bigint/serde"]
lbf = ["dep:lbr-prelude", "dep:serde_json"]
chrono = ["dep:chrono"]
